Fixed a CSS issue where a section was too tall

--- a/SegnaLibro/css/style.css
+++ b/SegnaLibro/css/style.css
@@ -2130,6 +2130,7 @@ main[data-book_modify] div:last-of-type > button:hover {
 
   main[data-copiesofbook] > section:last-of-type {
     padding-bottom: 20px;
+    height: 80px;
   }
 
   main[data-advancedsearch] > header > form {
